# blaze-terminal

./: .gitignore  .prettierignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json
apps/desktop/src/: App.css  App.tsx  Terminal.css  Terminal.tsx  blocks.ts  decorations.ts  linkIndex.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: ai.rs  git.rs  lib.rs  main.rs  pty.rs  runbooks.rs  secrets.rs  settings.rs  shell_integration.rs  smart_actions.rs  ssh.rs
apps/desktop/src/components/: AiPrompt.tsx  GitActionMenu.tsx  GitStatusBar.tsx  PaneTree.tsx  ParsedPicker.tsx  RunbookPicker.tsx  RunbookView.tsx  SaveRunbookDialog.tsx  SearchBar.tsx  ShellIntegrationBanner.tsx  Splitter.tsx  SshHostsPicker.tsx  TabBar.tsx  TerminalHeader.tsx  Toast.tsx  TransferConfirmDialog.tsx  VariablePrompt.tsx  ai-prompt.css  banner.css  git-action-menu.css  git-status-bar.css  layout.css  parsed-picker.css  runbook.css  terminal-header.css  toast.css  transfer.css
apps/desktop/src/hooks/: useShortcuts.ts
apps/desktop/src/state/: LayoutContext.tsx  SettingsContext.tsx  ai.ts  cwdMap.ts  git.ts  layout.ts  parsed.ts  profiles.ts  runbooks.ts  settings.ts  shellIntegration.ts  smartActions.ts  ssh.ts  transfer.ts  variables.ts
crates/blaze-actions/: Cargo.toml
crates/blaze-actions/src/: lib.rs  registry.rs  template.rs
crates/blaze-ai/: Cargo.toml
crates/blaze-ai/src/: claude.rs  lib.rs  ollama.rs  openai.rs  prompt.rs
crates/blaze-parsers/: Cargo.toml
crates/blaze-parsers/src/: ansi.rs  find.rs  git_status.rs  grep.rs  lib.rs  ls.rs
crates/blaze-pty/: Cargo.toml
crates/blaze-pty/src/: lib.rs
crates/blaze-runbook/: Cargo.toml
crates/blaze-runbook/src/: fs.rs  lib.rs  parser.rs  writer.rs
crates/blaze-shell-integration/: Cargo.toml
crates/blaze-shell-integration/src/: lib.rs
crates/blaze-shell-integration/src/snippets/: bash.sh  fish.fish  zsh.sh
crates/blaze-transfer/: Cargo.toml
crates/blaze-transfer/src/: lib.rs
crates/blaze-vt/: Cargo.toml
crates/blaze-vt/src/: lib.rs  osc.rs
docs/: config-example.toml  execution-plan.md  runbook-example.md  specs.md
