[workspace]
resolver = "2"
members = [
    "apps/desktop/src-tauri",
    "crates/blaze-pty",
    "crates/blaze-vt",
    "crates/blaze-shell-integration",
    "crates/blaze-parsers",
    "crates/blaze-actions",
    "crates/blaze-transfer",
    "crates/blaze-runbook",
    "crates/blaze-ai",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Blaze contributors"]
repository = "https://github.com/baliganikhil/blaze"
rust-version = "1.80"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
