[package]
name = "blaze-actions"
description = "Smart-action registry, pattern matching, template expansion for Blaze"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, optional = true }
thiserror.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde"]
