[package]
name = "blaze-ai"
description = "AI provider trait and adapters (Ollama, Claude, OpenAI/Codex) for Blaze"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
