[package]
name = "blaze-ai"
description = "AI provider trait and adapters (Ollama, Claude, OpenAI/Codex) for Blaze"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, optional = true }
thiserror.workspace = true
tracing.workspace = true
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

[features]
default = ["serde"]
serde = ["dep:serde"]
