[package]
name = "blaze-parsers"
description = "Output parsers for known commands (ls, find, grep, git, ps, ...) for Blaze"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, optional = true }
thiserror.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde"]
