[package]
name = "blaze-pty"
description = "PTY abstraction for Blaze (portable-pty wrapper, resize, lifecycle)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
portable-pty = "0.9"
thiserror.workspace = true
tracing.workspace = true
