[package]
name = "blaze-shell-integration"
description = "OSC 133 shell integration installer (zsh, bash, fish) for Blaze"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, optional = true }
thiserror.workspace = true
tracing.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde"]
