[package]
name = "blaze-transfer"
description = "Drag-drop transfer engine: tool selection (cp/rsync/scp), job queue, progress, conflicts"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
