[package]
name = "blaze-vt"
description = "ANSI/VT parser and command-block tracking for Blaze"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, optional = true }
thiserror.workspace = true
tracing.workspace = true
base64 = "0.22"

[features]
default = ["serde"]
serde = ["dep:serde"]
